# MCPSecTrace

./: .gitignore  CLAUDE.md  MCPSecTrace部署运维指南.md  README.md  browser_data.py  build_exe.py  focus_pack.py  init.py  main.py  pyproject.toml  sysmon.py
.clinerules/: rule.md  test.md
.clinerules/workflows/: 挖矿病毒.md  远控木马.md
.github/: branch-protection-setup.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml  pr-review-required.yml
assets/: clinesetting.json  clinesqlite.txt  mcpsetting.json  rule.md
assets/saoudrizwan.claude-dev-3.38.2/: .vsixmanifest  changelog.md  package.json
assets/workflow/: 远控木马.md
config/: settings.toml  user_settings.toml
config/custom/: README.md
config/defaults/: automation.toml  base.toml  browser.toml  huorong_ui_positions.toml  ioc.toml  positions.toml
docs/: configuration.md  架构图-Mermaid版本.md
docs/development/: README.md  github-collaboration-guide.md  post-refactor-testing-guide.md
external_mcp/winlog-mcp/: .gitignore
logs/: 221.194.131.179_溯源报告.md  52.168.117.170_溯源报告.md
logs/huorong/: huorong_securitylog_20251211_013917.txt
logs/ioc/: 10.39.38.79_ip_threat_report.md  106.43.108.228_ip_threat_report.md  106.43.108.228_threat_data.csv  112.82.223.167_ip_threat_report.md  221.194.131.179_ip_threat_report.md  221.194.131.179_threat_data.csv  52.168.117.170_ip_threat_report.md  52.168.117.170_release_files.csv  52.168.117.170_threat_data.csv  8.8.8.8_ip_threat_report.md  8.8.8.8_release_files.csv  8.8.8.8_threat_data.csv  fget-career.com_domain_threat_report.md  fget-career.com_可疑进程和文件路径.csv  fget-career.com_相关样本列表.csv  xiaoshihou.name_domain_threat_report.md  xiaoshihou.name_release_files.csv  xiaoshihou.name_threat_data.csv
mcp/: browser_mcp.py  focus_pack_mcp.py  huorong_mcp.py  path_diagnostic.py
scripts/: run_browser_forensics.py  start_mcp_servers.py  test_all.sh
tests/: OCR_PERFORMANCE_TEST.md  compress_projects.py  deployment_test.py  pytest.py  test_everything_debug.py  test_everything_search.py  test_ocr_performance.py
tests/integration/: test_imports.py
tests/unit/: test_find_image_on_screen.py  test_paddleocr.py  (+2 more)
(+35 files in other folders)
